--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "combine_test.c" "bt_test.c" "uart_echo_example_main.c" "motor_test.c"
+idf_component_register(SRCS "uart_echo_example_main.c" "bt_test.c"
                     INCLUDE_DIRS ".")
